<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tipleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="57dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="239dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_pass"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="305dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/placeholder_pass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="338dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_register"
        android:drawableLeft="@drawable/ic_baseline_how_to_reg_24"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_check_circle_24"
        android:text="@string/lbl_btn_ingress"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="419dp" />

</android.support.constraint.ConstraintLayout>